chore: changed migrations and created basic sample CRUD

--- a/.env.example
+++ b/.env.example
@@ -5,11 +5,11 @@ ENVIRONMENT='local'
 SERVER_HOST='localhost'
 SERVER_PORT=8192
 SERVER_GLOBAL_PREFIX=''
-SERVER_NAME='Server Name'
+SERVER_NAME='App Mimo'
 SERVER_VERSION='0.0.1'
 SERVER_DEBUG='false'
 
-# App configurations that refers to App itself.
+# App configurations that refers to App itself. Disable with 0.0.0 version value.
 APP_MINIMUM_VERSION='0.0.1'
 
 # Compression configurations that refers to GZIP and DEFLATE algorithms.
